# autopep8

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  autopep8.el  autopep8.py  coveralls.bash  example.py  install_hooks.bash  pyproject.toml  reformatted_lines.py  setup.cfg  setup.py  test_target.py  tox.ini  update_readme.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  python-package.yml  python-publish.yml
hooks/: pre-push
test/: .gitignore  acid.py  acid_github.py  acid_pypi.bash  acid_pypi.py  autopep8_vim.py  bad_encoding.py  break_build_tokens_logical.py  e101_example.py  example.py  example_with_reduce.py  french_example.py  inspect_example.py  iso_8859_1.py  test_autopep8.py  test_gb2312_stdin.py  test_suite.py  todo.py  vectors_example.py  vim_autopep8.py  windows_example.py
test/coverage_python/: python
test/fake_configuration/: .pep8
test/fake_pycodestyle_configuration/: tox.ini
test/suite/: E12not.py  E27.py  E30.py  E70.py  E72.py  long_lines.py  utf-8.py  windows-gb2312.txt
