[metadata]
name = autopep8
author = Hideo Hattori
author_email = hhatto.jp@gmail.com
license = Expat License
description = A tool that automatically formats Python code to conform to the PEP 8 style guide
keywords = automation, pep8, format, pycodestyle
url = https://github.com/hhatto/autopep8
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
py_modules = autopep8
zip_safe = False
install_requires = pycodestyle >= 2.5.0

[options.entry_points]
console_scripts = autopep8 = autopep8:main
